--- a/KaranSinMorsommeFerie/A Hoved Database/klesplagg.css
+++ b/KaranSinMorsommeFerie/A Hoved Database/klesplagg.css
@@ -4,10 +4,8 @@ body {
   background-color: #dbdde0
 }
 
-header{
+header {
   background-image: url(bilder_klær_riktig/bg-1.jpg);
-
-
 }
 
 .header_øverst {
@@ -18,7 +16,6 @@ header{
   text-transform: uppercase;
   font-size: 20px;
   font-weight: bold;
-
 }
 
 .header_øverst>.lang {
@@ -30,6 +27,7 @@ header{
   font-style: normal;
   font-weight: lighter;
 }
+
 mark {
   color: blue;
 }
@@ -38,9 +36,6 @@ mark {
   grid-column: span 3;
   margin-top: 99px;
   font-size: 15px;
-
-
-
 }
 
 .logo {
@@ -51,7 +46,6 @@ mark {
   padding-left: 130px;
   padding-bottom: 15px;
   grid-column: span 4;
-
 }
 
 .header_øverst>.lenke {
@@ -61,21 +55,15 @@ mark {
   display: inline-block;
 }
 
-
-
-
 .header_øverst>.usynlig1 {
   grid-column: span 2;
 }
-
 
 .header_øverst>.lenke {
   align-self: center;
   text-decoration: none;
   margin-top: 50px;
-
 }
-
 
 .header_øverst>.lenke>a {
   color: black;
@@ -92,38 +80,37 @@ mark {
   width: 30px;
 }
 
-.søkemotor{
+.søkemotor {
   box-sizing: border-box;
 }
+
 .søkemotor>[type=text] {
   padding: 10px;
-   font-size: 17px;
-   border: 1px solid grey;
-   float: left;
-   width: 220px;
-   background: #f1f1f1;
-
+  font-size: 17px;
+  border: 1px solid grey;
+  float: left;
+  width: 220px;
+  background: #f1f1f1;
 }
 
 .søkemotor>[type=submit] {
   float: left;
-    width: 60px;
-    padding: 10px;
-    background: #2196F3;
-    color: white;
-    font-size: 17px;
-    border: 1px solid grey;
-    border-left: none; /* Prevent double borders */
-    cursor: pointer;
+  width: 60px;
+  padding: 10px;
+  background: #2196F3;
+  color: white;
+  font-size: 17px;
+  border: 1px solid grey;
+  border-left: none;
+  /* Prevent double borders */
+  cursor: pointer;
 }
 
 .søkemotor {
   grid-column: span 1;
   margin-left: 580px;
   margin-top: 30px;
-
 }
-
 
 .navigation {
   text-align: center;
@@ -134,7 +121,6 @@ mark {
   padding-left: 290px;
   padding-right: 290px;
 }
-
 
 .navigation a {
   text-decoration: none;
@@ -151,20 +137,18 @@ mark {
   grid-row: span 6;
 }
 
-
-.dropned>a{
-position: relative;
-color: #000;
-text-decoration: none;
-font-size: 25px;
-
+.dropned>a {
+  position: relative;
+  color: #000;
+  text-decoration: none;
+  font-size: 25px;
 }
 
 .dropned>a:hover {
-color: black;
+  color: black;
 }
 
-.dropned>a::before{
+.dropned>a::before {
   content: "";
   position: absolute;
   width: 100%;
@@ -179,12 +163,11 @@ color: black;
   transition: all 0.3s ease-in-out 0s;
 }
 
-.dropned>a:hover::before{
+.dropned>a:hover::before {
   visibility: visible;
   -webkit-transform: scaleX(1);
   transform: scaleX(1);
 }
-
 
 .dropknapp {
   border: none;
@@ -202,7 +185,6 @@ color: black;
   position: absolute;
   background-color: #b8d0ce;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-
 }
 
 .dropned-content a {
@@ -225,36 +207,15 @@ color: black;
   display: block;
 }
 
-
-
-
-
-
-
-img{
+img {
   width: 210px;
 }
 
 /*Main*/
+/*
 
 
-main{
-  text-align: center;
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  text-decoration: none;
-  text-transform: uppercase;
-  font-size: 28px;
-  font-weight: bold;
-  margin: 30px 50px;
-  background-color: #fff2ea;
-  padding-left: 50px;
-  padding-right: 50px;
-  padding-top: 40px;
-
-}
-
-
+*/
 .valg_klær1, #valg_klær1 {
   display: grid;
   background-color: #fff2ea;
@@ -262,9 +223,6 @@ main{
   margin: 0px 50px;
   padding: 25px;
 }
-
-
-
 
 /* Dropdown Button */
 .dropbtn {
@@ -294,7 +252,9 @@ main{
 }
 
 /* The search field when it gets focus/clicked on */
-#myInput:focus {outline: 3px solid #ddd;}
+#myInput:focus {
+  outline: 3px solid #ddd;
+}
 
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
@@ -323,21 +283,18 @@ main{
 }
 
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #f1f1f1}
-
-/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-.show {display:block;}
-
-
-
-
-
-
-.h1_over{
-padding: 15px;
-
+.dropdown-content a:hover {
+  background-color: #f1f1f1
 }
 
+/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+.show {
+  display: block;
+}
+
+.h1_over {
+  padding: 15px;
+}
 
 .klær_hoved {
   display: grid;
@@ -348,8 +305,6 @@ padding: 15px;
   margin: 10px 50px;
   background-color: #fff2ea;
 }
-
-
 
 .tabell_full {
   grid-row: span 4;
@@ -372,7 +327,6 @@ padding: 15px;
   position: sticky;
   top: 5px;
   padding-top: 50px;
-
 }
 
 .tabell_ord {
@@ -390,38 +344,107 @@ padding: 15px;
   color: grey;
 }
 
+main {
+  text-align: center;
+  display: grid;
+  grid-template-columns: repeat(24, 1fr);
+  margin: 30px 50px;
+  background-color: #fff2ea;
+  padding-top: 40px;
+}
 
-
-
-
-
-
-
-
-
-.vare{
-padding: 20px;
-
-box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-
+.bilde_liten {
+  grid-row: span 4;
+  grid-column: span 4;
+  height: 50%;
 }
 
 
 
-.vare:hover{
-  -moz-box-shadow: 0 0 20px black;
-  -webkit-box-shadow: 0 0 10px black;
-  box-shadow: 0 0 10px black;
+.bilde_liten>img {
+  height: 50%;
+}
+
+.bilde_stor {
+  grid-row: span 4;
+  grid-column: span 10;
+  width: 100%
+}
+
+.bilde_stor>img {
+  width: 100%;
+  height: 75%;
+}
+
+.varer_info {
+  grid-column: span 10;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: bold;
+  padding-top: 30px;
+}
+
+.tilbakemelding {
+  font-size: 15px;
+  padding-left: 80px;
+  color: grey;
+  text-decoration: none;
+}
+
+.navn_varer {
+  font-size: 30px;
+}
+
+.pris_varer {
+  font-size: 28px;
+  padding: 20px;
+}
+
+.styled-select.slate {
+  height: 34px;
+  width: 240px;
+}
+
+.styled-select.slate select {
+  border: 2px solid #ccc;
+  font-size: 20px;
+  height: 64px;
+  width: 298px;
+  margin-left: 120px;
+  margin-top: 10px;
 }
 
 
-.navn_varer{
-font-size: 16px;
-
+.handlekurv_knapp {
+  border-radius: 3px;
+  border-color: black;
+  margin-top: 90px;
+  padding: 20px;
+  width: 80%;
+  font-size: 20px;
+  background-color: #333333;
+  color: white;
 }
 
-.pris_varer{
-  font-size: 18px;
+
+
+button:focus {
+background-color: green;
+}
+
+.folk_liker_også{
+  text-align: center;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 28px;
+  font-weight: bold;
+  margin: 30px 50px;
+  background-color: #fff2ea;
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-top: 40px;
 }
 
 .reklame2>a>img {
@@ -432,6 +455,7 @@ font-size: 16px;
   background-position: center;
   background-size: cover;
 }
+
 .hele_footer {
   background-color: black;
   color: white;
@@ -468,6 +492,55 @@ thead {
 tbody {
   font-style: normal;
   font-size: 13px;
+  font-family: monospace;
+  font-weight: lighter;
+  text-transform: lowercase;
+}
+
+.reklame2>a>img {
+  width: 100%;
+  height: 300px;
+  transition: 0.8s;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.hele_footer {
+  background-color: black;
+  color: white;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  text-decoration: none;
+  font-weight: normal;
+  padding: 60px 100px;
+}
+
+th>a {
+  text-decoration: none;
+  color: white;
+}
+
+td>a {
+  text-decoration: none;
+  color: white;
+}
+
+.sosbilder {
+  width: 40px;
+  height: 40px;
+  border-radius: 15px;
+  margin: 15px;
+}
+
+thead {
+  text-decoration: underline;
+  font-size: 22px;
+}
+
+tbody {
+  font-style: normal;
+  font-size: 18px;
   font-family: monospace;
   font-weight: lighter;
   text-transform: lowercase;
