--- a/KaranSinMorsommeFerie/A Hoved Database/kundeservice.css
+++ b/KaranSinMorsommeFerie/A Hoved Database/kundeservice.css
@@ -1,58 +1,339 @@
-html{
-  font-size: 100%;
-}
-body{
-  background-color: #eee;
-  font-family: sans-serif;
-}
-main {
-  max-width: 700px;
-  margin: auto;
-  padding: 1rem;
-  background-color: white;
-}
-#secMeldinger{
-  height: 75vh;
-  display: grid;
-  align-content: end;
-  grid-gap: 0.5rem;
-  border-bottom: 1px solid #eee;
-  padding: 1rem;
-  margin-bottom: 1rem;
-  overflow: auto;
-}
-#secMeldinger div span{
-  padding: 0.75rem;
-  border-radius: 1rem;
-}
-#secMeldinger div img{
-  height: 40px;
-  border-radius: 50%;
-}
-.me{
-  justify-self: end;
-}
-.others{
-  justify-self: start;
-}
-.me span{
-  background-color: blueviolet;
-  color: white;
-  grid-row-start: 1;
-}
-.others span{
-  background-color: #eee;
+body {
+  margin: 0px;
+  top: 0px;
+  background-color: #dbdde0
 }
 
-.skjemaer {
-    display: grid;
-    grid-template-columns: 1fr;
+header {
+  background-image: url(bilder_klær_riktig/bg-1.jpg);
 }
-.skjemaer input {
-    width: 100%;
-    padding: 0.5rem;
-    box-sizing: border-box;
+
+
+.header_øverst {
+  text-align: center;
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 20px;
+  font-weight: bold;
 }
-.notloggedin {
-    text-align: center;
+
+.header_øverst>.lang {
+  grid-column: span 12;
+  background-color: white;
+  color: black;
+  text-transform: lowercase;
+  text-decoration: underline;
+  font-style: normal;
+  font-weight: lighter;
+}
+
+mark {
+  color: blue;
+}
+
+.header_øverst>.usynlig {
+  grid-column: span 3;
+  margin-top: 99px;
+  font-size: 15px;
+}
+
+.logo {
+  width: 150px;
+  height: 120px;
+  padding-top: 15px;
+  padding-right: 0px;
+  padding-left: 130px;
+  padding-bottom: 15px;
+  grid-column: span 4;
+}
+
+.header_øverst>.lenke {
+  font-size: 13px;
+  margin: 10px;
+  border-radius: 5px;
+  display: inline-block;
+}
+
+.header_øverst>.usynlig1 {
+  grid-column: span 2;
+}
+
+.header_øverst>.lenke {
+  align-self: center;
+  text-decoration: none;
+  margin-top: 50px;
+}
+
+.header_øverst>.lenke>a {
+  color: black;
+  text-decoration: none;
+}
+
+.header_øverst>.lenke>a:hover {
+  color: darkgrey;
+  text-decoration: underline;
+  transition: all ease-in-out 350ms;
+}
+
+.iconbilde {
+  width: 30px;
+}
+
+.søkemotor {
+  box-sizing: border-box;
+}
+
+.søkemotor>[type=text] {
+  padding: 10px;
+  font-size: 17px;
+  border: 1px solid grey;
+  float: left;
+  width: 220px;
+  background: #f1f1f1;
+}
+
+.søkemotor>[type=submit] {
+  float: left;
+  width: 60px;
+  padding: 10px;
+  background: #2196F3;
+  color: white;
+  font-size: 17px;
+  border: 1px solid grey;
+  border-left: none;
+  /* Prevent double borders */
+  cursor: pointer;
+}
+
+.søkemotor {
+  grid-column: span 1;
+  margin-left: 580px;
+  margin-top: 30px;
+}
+
+.navigation {
+  text-align: center;
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  padding-top: 60px;
+  padding-bottom: 0px;
+  padding-left: 290px;
+  padding-right: 290px;
+}
+
+.navigation a {
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 20px;
+  font-weight: bold;
+  color: black;
+}
+
+.dropned {
+  float: center;
+  overflow: hidden;
+  padding-bottom: 50px;
+  grid-row: span 6;
+}
+
+.dropned>a {
+  position: relative;
+  color: #000;
+  text-decoration: none;
+  font-size: 25px;
+}
+
+.dropned>a:hover {
+  color: black;
+}
+
+.dropned>a::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 4px;
+  bottom: 0;
+  left: 0;
+  background-color: #000;
+  visibility: hidden;
+  -webkit-transform: scaleX(0);
+  transform: scaleX(0);
+  -webkit-transition: all 0.4s ease-in-out 0s;
+  transition: all 0.3s ease-in-out 0s;
+}
+
+.dropned>a:hover::before {
+  visibility: visible;
+  -webkit-transform: scaleX(1);
+  transform: scaleX(1);
+}
+
+.dropknapp {
+  border: none;
+  outline: none;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+  text-transform: uppercase;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.dropned-content {
+  display: none;
+  position: absolute;
+  background-color: #b8d0ce;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+}
+
+.dropned-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+}
+
+.dropned-content a:hover {
+  text-decoration: underline;
+  color: darkgrey;
+  transition: all ease-in-out 350ms;
+}
+
+.dropned:hover .dropned-content {
+  display: block;
+}
+
+{
+box-sizing: border-box;
+}
+
+/* Button used to open the chat form - fixed at the bottom of the page */
+.open-button {
+  background-color: #555;
+  color: white;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  opacity: 0.8;
+  position: fixed;
+  bottom: 23px;
+  right: 28px;
+  width: 280px;
+}
+
+/* The popup chat - hidden by default */
+.form-popup {
+  display: none;
+  position: fixed;
+  bottom: 0;
+  right: 15px;
+  border: 3px solid #f1f1f1;
+  z-index: 9;
+}
+
+/* Add styles to the form container */
+.form-container {
+  max-width: 300px;
+  padding-right: 40px;
+  padding-left: 10px;
+  background-color: white;
+  text-align: center;
+  margin: 30px 550px;
+}
+
+/* Full-width textarea */
+.form-container textarea {
+  width: 100%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  border: none;
+  background: #f1f1f1;
+  resize: none;
+  min-height: 200px;
+}
+
+/* When the textarea gets focus, do something */
+.form-container textarea:focus {
+  background-color: #ddd;
+  outline: none;
+}
+
+/* Set a style for the submit/login button */
+.form-container .btn {
+  background-color: #4CAF50;
+  color: white;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  margin-bottom: 10px;
+  opacity: 0.8;
+  border-style: solid;
+}
+
+/* Add a red background color to the cancel button */
+.form-container .cancel {
+  background-color: red;
+}
+
+/* Add some hover effects to buttons */
+.form-container .btn:hover, .open-button:hover {
+  opacity: 1;
+}
+.kundeservice_ferdig{
+  text-align: center;
+  font-size: 60px;
+  padding: 20px;
+}
+.reklame2>a>img {
+  width: 100%;
+  height: 300px;
+  transition: 0.8s;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+.hele_footer {
+  background-color: black;
+  color: white;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  text-decoration: none;
+  font-weight: normal;
+  padding: 60px 100px;
+}
+
+th>a {
+  text-decoration: none;
+  color: white;
+}
+
+td>a {
+  text-decoration: none;
+  color: white;
+}
+
+.sosbilder {
+  width: 40px;
+  height: 40px;
+  border-radius: 15px;
+  margin: 15px;
+}
+
+thead {
+  text-decoration: underline;
+  font-size: 22px;
+}
+
+tbody {
+  font-style: normal;
+  font-size: 18px;
+  font-family: monospace;
+  font-weight: lighter;
+  text-transform: lowercase;
 }
